# R_Chess

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  License.txt  README.md  chess  compile.sh  ù
.github/workflows/: ci.yml
sources/: CMakeLists.txt  board.cpp  board.hpp  constant.hpp  events.cpp  main.cpp  square.cpp  square.hpp
sources/board/: board.hpp  events.cpp  instanciation.cpp  moves.cpp
sources/case/: case.cpp
sources/components/: square.cpp  square.hpp
sources/moves/: move.hpp  move_node.hpp
sources/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  pieces.cpp  pieces.hpp  queen.cpp  rook.cpp
sources/ui/: draw.hpp
src/: CMakeLists.txt  Case.cpp  R_ChessConfig.hpp  background.cpp  calcul.cpp  calculCheckMate.cpp  calculKing.cpp  casesFunction.cpp  config.hpp  constant.hpp  drawAndLoad.cpp  event.cpp  fonction_sdl.cpp  main.cpp  mainStruct.cpp  mouseEvent.cpp  pieceSelected.cpp  piecesFunction.cpp  rchess.cpp  rchess.hpp  tempCalcul.cpp
src/board/: board.cpp  board.hpp  events.cpp
src/case/: case.cpp  case.hpp
src/class/: Case.hh  Input.hh  Piece.hh  Type.hh
src/components/: move_histories_ui.cpp  move_histories_ui.hpp
src/config/: config.cpp  config.hpp
src/events/: events.cpp  events.hpp
src/fonts/: font.cpp  font.hpp
src/header/: Case.hh  Input.hh  Piece.hh  background.hpp  calcul.hpp  calculCheckMate.hpp  calculKing.hpp  casesFunction.hpp  drawAndLoad.hpp  event.hpp  f_prototypes.hpp  lib.hpp  mainStruct.hpp  mouseEvent.hpp  pieceSelected.hpp  piecesFunction.hpp  tempCalcul.hpp
src/moves/: move.cpp  move_node.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  pieces.cpp  pieces.hpp  queen.cpp  rook.cpp
src/ui/: draw.hpp  rect.cpp
src/var/: var.hpp
